--- a/src/components/login/LoginDashboard.css
+++ b/src/components/login/LoginDashboard.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap');
+
 body{
     background-color: #1423dc;
 }
@@ -12,9 +14,37 @@ body{
     top: 31px;
 }
 
+.user-login-container{
+    font-size: 18px ;
+
+}
+.login-container{
+    margin-left: 12px;
+    height:24px ;
+    width: 25%;
+    margin-bottom: 32px;
+}
+
+.user-password-container{
+    font-size: 18px ;;
+
+}
+
+.password-container{
+    margin-left: 12px;
+    margin-bottom:32px ;
+    height:24px ;
+    width: 25%;
+}
+
 .control_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     position: absolute;
     top: 300px;
+    margin-left: 350px;
     
 }
 
@@ -26,10 +56,58 @@ body{
 }
 
 .title_login {
-    font-size: 80px;
-    display: flex;
-    text-align: center;
-    padding-bottom: 40px;
+    font-size: 70px;
+    margin-left: 130px;
+    margin-right: 25px;
+    margin-bottom: 42px;
+    font-weight: 900;
+    font-family: 'Public Sans', sans-serif;;
+    
 }
 
-
+.login-btn {
+    appearance: button;
+    background-color: #1423dc;
+    border: 1px solid #1423dc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-family: 'Public Sans', sans-serif;
+    font-size: 16px;
+    line-height: 1.15;
+    overflow: visible;;
+    padding: 12px 16px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transition: all 80ms ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 125px;
+    margin-left: 85%;
+    margin-bottom: 16px;
+    margin-top: 2px;
+    margin-left: 12px;
+    height:40px;
+    margin-bottom: 12px;
+  }
+  
+  .login-btn:disabled {
+    opacity: .5;
+  }
+  
+  .login-btn:focus {
+    outline: 0;
+  }
+  
+  .login-btn:hover {
+    background-color: #0A46E4;
+    border-color: #0A46E4;
+  }
+  
+  .login-btn:active {
+    background-color: #1423dc;
+    border-color: #0039D7;
+  }
