--- a/src/components/admin/register/Register.css
+++ b/src/components/admin/register/Register.css
@@ -10,6 +10,7 @@ body .Register{
     color: #1423dc;
     font-size: 60px;
     font-weight: 900;
+    text-align: center;
 
 }
 
@@ -18,6 +19,7 @@ body .Register{
     margin-bottom: 32px;
     font-size: 24px;
     font-weight: 20px bold;
+    text-align: center;
 }
 
 .account-container{
@@ -84,6 +86,7 @@ input .account-container{
 }
 .avatar-container{
     margin-left: 12px;
+    left: 50%;
     height:24px ;
     width: 25%;
 }
