--- a/src/pages/Gametwo.css
+++ b/src/pages/Gametwo.css
@@ -4,6 +4,10 @@
     z-index: 2;
     
 }
-.container{
+.containertwo{
     position: absolute;
+}
+.App{
+    margin-left:10%;
+    margin-bottom:20%;
 }
