--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -1,3 +1,7 @@
 .Game{
     display: flex;
+    justify-content: space-around;
+    padding-top: 50px;
+    background-color: #B1D4F2;
+    height: 100vh;
 }
