--- a/src/components/Timer.scss
+++ b/src/components/Timer.scss
@@ -21,6 +21,7 @@ $sec: 60;
 //   font-family: 'Finger Paint', cursive;
 // }
 .wrapper {
+  margin-top: 4px;
     margin-bottom: 50px;
   position: relative;
   width: 2rem;
