--- a/src/pages/Gameone.css
+++ b/src/pages/Gameone.css
@@ -12,11 +12,11 @@
     width: 700px;
     
 }
-.App{
+.Gameone{
     margin-left:20%;
     margin-bottom:20%;
 }
-img{
+.game-container img{
     height: 500px;
     width: 700px;
 }
@@ -29,6 +29,7 @@ img{
 }
 
 .the_end {
+    margin-top: 4px;
     font-family: 'Public Sans', sans-serif;
     color: #2a7e7e;
     font-size: 40px;
@@ -47,6 +48,7 @@ img{
 
 
 .game-container{
+    
     margin-top: 100px;
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
